--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
       border-radius:12px; margin-top:6px; box-shadow:0 8px 24px rgba(0,0,0,.08);
       max-height:320px; overflow:auto; display:none; z-index:20;
     }
-    .suggestion{
-      padding:10px 14px; cursor:pointer; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;
-    }
+    .suggestion{ padding:10px 14px; cursor:pointer; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
     .suggestion:hover, .suggestion.active{ background:#f8fafc; }
 
     /* Carousel */
@@ -60,9 +58,7 @@
     }
     iframe{ width:100%; height:100%; border:0; }
 
-    /* Hide any old list */
     #playerList{ display:none; }
-
     .muted{ color:var(--muted); font-size:12px; text-align:center; }
   </style>
 </head>
@@ -83,7 +79,6 @@
       <div class="muted">Tip: click a card to load links & preview.</div>
     </div>
 
-    <!-- kept for compatibility, not displayed -->
     <ul id="playerList"></ul>
 
     <div id="linksContainer" class="links-container">
@@ -97,11 +92,24 @@
 
   <script>
     const csvFilePath = "T1Ds - Sheet1.csv";
-    const PLACEHOLDER_IMG = "https://images.unsplash.com/photo-1540575467063-178a50c2df87?q=80&w=1200&auto=format&fit=crop";
+
+    /* Silhouette placeholder (inline SVG) */
+    const PLACEHOLDER_IMG =
+      "data:image/svg+xml;utf8," +
+      encodeURIComponent(`
+        <svg xmlns='http://www.w3.org/2000/svg' width='1200' height='800'>
+          <rect width='100%' height='100%' fill='#e5e7eb'/>
+          <g fill='#cbd5e1'>
+            <circle cx='600' cy='320' r='120'/>
+            <path d='M300 760 q300-220 600 0 v40 H300z'/>
+          </g>
+        </svg>
+      `);
 
     let players = [];
     let filtered = [];
     let activeIndex = -1;
+    let autoTimer = null;   // for carousel auto-scroll
 
     /* ---------- Load CSV ---------- */
     async function fetchCSV(){
@@ -126,7 +134,7 @@
       buildCarousel(players);
     }
 
-    /* ---------- Custom autocomplete (no native datalist) ---------- */
+    /* ---------- Custom autocomplete ---------- */
     function onType(){
       const q = document.getElementById("searchBar").value.trim().toLowerCase();
       const box = document.getElementById("suggestions");
@@ -161,10 +169,8 @@
 
       if(e.key === "ArrowDown"){ e.preventDefault(); activeIndex = (activeIndex+1) % items.length; highlight(items); }
       else if(e.key === "ArrowUp"){ e.preventDefault(); activeIndex = (activeIndex-1+items.length) % items.length; highlight(items); }
-      else if(e.key === "Enter"){
-        e.preventDefault();
-        if(activeIndex >= 0){ selectSuggestion(activeIndex); }
-      } else if(e.key === "Escape"){ box.style.display="none"; }
+      else if(e.key === "Enter"){ e.preventDefault(); if(activeIndex >= 0){ selectSuggestion(activeIndex); } }
+      else if(e.key === "Escape"){ box.style.display="none"; }
     }
 
     function highlight(items){
@@ -179,7 +185,6 @@
       showPlayer(p);
     }
 
-    // Close suggestions when clicking elsewhere
     document.addEventListener("click", (e)=>{
       if(!document.querySelector(".search-wrap").contains(e.target)){
         document.getElementById("suggestions").style.display="none";
@@ -218,7 +223,7 @@
     function showPreview(url){ document.getElementById("previewFrame").src = url; }
     function getDomain(url){ try{ return new URL(url).hostname.replace(/^www\./,""); }catch{ return "Link"; } }
 
-    /* ---------- Carousel (includes everyone; uses placeholder when missing) ---------- */
+    /* ---------- Carousel ---------- */
     function buildCarousel(all){
       const pool = all.map(p => ({
         ...p,
@@ -259,14 +264,26 @@
 
       block.style.display = picks.length ? "block" : "none";
 
-      // gentle auto-scroll
+      // -------- Auto-scroll that stops on user interaction --------
+      startAutoScroll(wrap);
+      ["wheel","touchstart","mousedown","keydown"].forEach(evt =>
+        wrap.addEventListener(evt, stopAutoScroll, { once:true, passive:true })
+      );
+      wrap.addEventListener("scroll", stopAutoScroll, { once:true, passive:true });
+    }
+
+    function startAutoScroll(wrap){
+      stopAutoScroll(); // clear any previous timer
       let x = 0;
-      setInterval(()=>{
-        if (!wrap.isConnected) return;
+      autoTimer = setInterval(()=>{
+        if (!wrap.isConnected) { stopAutoScroll(); return; }
         x = (x + 220);
         if (x > wrap.scrollWidth - wrap.clientWidth) x = 0;
         wrap.scrollTo({ left: x, behavior:"smooth" });
       }, 4000);
+    }
+    function stopAutoScroll(){
+      if(autoTimer){ clearInterval(autoTimer); autoTimer = null; }
     }
 
     fetchCSV();
